# TrinityCore-modular-system

./: CMakeLists.txt  INTEGRATION_GUIDE.md  README.md
modules/: CMakeLists.txt  README.md  create_module.ps1  create_module.py  list_modules.cmake  validate_modules.cmake
modules/mod-example/: CMakeLists.txt  module.json
modules/mod-example/conf/: ExampleModule.conf
modules/mod-example/src/: ExampleModule.cpp  ExampleModule.h
src/: CMakeLists.txt
src/server/: CMakeLists.txt
src/server/game/: CMakeLists.txt
src/server/game/Plugins/: CMakeLists.txt  IPlugin.h  PluginConfig.h  PluginHooks.h  PluginManager.cpp  PluginManager.h  README.md
src/server/game/Plugins/Examples/: ExamplePlugin.cpp  ExamplePlugin.h
src/server/game/Plugins/configs/: ExamplePlugin.conf
